[gd_scene load_steps=2 format=3 uid="uid://bwoomydsmbdo1"]

[ext_resource type="Script" uid="uid://dwf5fbpfa7cmt" path="res://scripts/interactable_object.gd" id="1_gknyc"]

[node name="InteractableObject" type="Area2D"]
script = ExtResource("1_gknyc")

[node name="PromptLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -8.0
offset_right = 36.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.24313726, 0.6509804, 0.24313726, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 16
text = "INTERACT"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
